--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -17,6 +17,10 @@
 			"tahlan_trail_twin":"graphics/tahlan/fx/trails_twin.png", 
 			"tahlan_trail_glow":"graphics/tahlan/fx/trails_glow.png",
 			"tahlan_trail_shockwave":"graphics/tahlan/fx/trails_shockwave.png",
+			"tahlan_trail_flow":"graphics/tahlan/fx/trails_flow.png",
+			"tahlan_trail_beam":"graphics/tahlan/fx/Xhan_beam_trail.png",
+			"tahlan_trail_foam":"graphics/tahlan/fx/Xhan_foam_trail.png",
+			"tahlan_trail_innerfoam":"graphics/tahlan/fx/Xhan_innerfoam_trail.png",
 			"dakka_shockwave":"graphics/fx/dakka_shockwave.png",
 		},
 		"glow_fx":{
